--- a/package.json
+++ b/package.json
@@ -18,15 +18,20 @@
   },
   "homepage": "https://github.com/wcastellan/nodeapp#readme",
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.1",
     "connect-session-sequelize": "^7.1.2",
     "dotenv": "^14.2.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "express-fileupload": "^1.2.1",
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
     "handlebars": "^4.7.7",
+    "inquirer": "^8.2.0",
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
+    "nodemon": "^2.0.15",
     "sequelize": "^6.14.0"
   }
 }
