--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
+    "cloudinary": "^1.28.1",
     "connect-session-sequelize": "^7.1.2",
     "dotenv": "^14.2.0",
     "ejs": "^3.1.6",
@@ -27,11 +28,14 @@
     "express-fileupload": "^1.2.1",
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
+    "fast-csv": "^4.3.6",
+    "fs": "^0.0.1-security",
     "handlebars": "^4.7.7",
     "inquirer": "^8.2.0",
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
+    "path": "^0.12.7",
     "sequelize": "^6.14.0"
   }
 }
