--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
     "path": "^0.12.7",
-    "sequelize": "^6.14.0"
+    "sequelize": "^6.14.0",
+    "serve": "^13.0.2"
   }
 }
