--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-session": "^1.17.2",
     "fast-csv": "^4.3.6",
     "fs": "^0.0.1-security",
+    "global": "^4.4.0",
     "handlebars": "^4.7.7",
     "inquirer": "^8.2.0",
     "multer": "^1.4.4",
